# picopi2

./: README.md
blink/: CMakeLists.txt  README.md  build.sh  deploy.sh  main.c
oled/: CMakeLists.txt  README.md  main.c
oled/.cache/clangd/index/: main.c.009669C839768C9B.idx  main.c.CBB33646C377279A.idx  main.c.FD4561DB865EBC08.idx  screen.c.0F0CAC925F91D0DC.idx  screen.h.3E043DA0A59EE4CE.idx
oled/src/: draw.c  draw.h  font.h  screen.c  screen.h
picoled/lib/OLED/: OLED_1in3_c.c
